# struggle_annotator

./: .gitignore  MANIFEST.in  README.md  example_app.py  pyproject.toml
.devcontainer/: devcontainer.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AnnotatorComponent.tsx  index.tsx
struggle_annotator/: __init__.py
