[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "struggle-annotator"
version = "0.1.0"
description = "Streamlit custom component for interactive NER-style text annotation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["streamlit>=1.28"]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["."]
include = ["struggle_annotator*"]

[tool.setuptools.package-data]
struggle_annotator = ["frontend/build/**/*"]
